Main form added

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,11 +2,13 @@
 
 
 {% block body %}
-<div class="container">
-    <h2>{{ 'main_form_title'|trans }}</h2>
+<div class="container d-grid gap-3">
+    <div class="row">
+        <h2>{{ 'main_form_title'|trans }}</h2>
+    </div>
     <div class="row-cols-2">
         <div class="col">
-            {#{ form(mainForm) }#}
+            {{ form(mainForm) }}
         </div>
     </div>
     <div class="row">
