--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -13,8 +13,8 @@
     </div>
     <div class="row">
         <div class="d-grid gap-2 d-md-block">
-            <a href="{#{ path('app_stub_new', {'_locale': app.request.locale}) }#}" class="btn btn-outline-primary btn-sm" role="button">{{ 'new_therapy_stub'|trans }}</a>
-            <a href="{#{ path('app_therapy_scheme', {'_locale': app.request.locale}) }#}" class="btn btn-outline-primary btn-sm" role="button">{{ 'new_therapy_scheme'|trans }}</a>
+            <a href="{{ path('app_therapy_stub_new', {'_locale': app.request.locale}) }}" class="btn btn-outline-primary" role="button">{{ 'new_therapy_stub'|trans }}</a>
+            <a href="{#{ path('app_therapy_scheme_new', {'_locale': app.request.locale}) }#}" class="btn btn-outline-primary" role="button">{{ 'new_therapy_scheme'|trans }}</a>
         </div>
     </div>
 </div>
