Added scheme with loading and result table form + additional translations

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="d-grid gap-2 d-md-block">
             <a href="{{ path('app_therapy_stub_new', {'_locale': app.request.locale}) }}" class="btn btn-outline-primary" role="button">{{ 'new_therapy_stub'|trans }}</a>
-            <a href="{#{ path('app_therapy_scheme_new', {'_locale': app.request.locale}) }#}" class="btn btn-outline-primary" role="button">{{ 'new_therapy_scheme'|trans }}</a>
+            <a href="{{ path('app_therapy_scheme_new', {'_locale': app.request.locale}) }}" class="btn btn-outline-primary" role="button">{{ 'new_therapy_scheme'|trans }}</a>
         </div>
     </div>
 </div>
