--- a/templates/therapy/stub/index.html.twig
+++ b/templates/therapy/stub/index.html.twig
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="d-grid gap-2 d-md-block">
-                {{ form_widget(stubForm.save)}}
+                {{ form_widget(stubForm.save, {'label': 'form_save'|trans })}}
                 {% if stubForm.delete_undo is defined %}
                     {{ form_widget(stubForm.delete_undo)}}
                 {% endif %}
