--- a/templates/therapy/stub/list.html.twig
+++ b/templates/therapy/stub/list.html.twig
@@ -4,9 +4,9 @@
 {% block body %}
 <div class="container">
     <h2>{{ 'therapy_stubs_list_title'|trans }}</h2>
-    <div class="row mb-3">
+    <div class="row">
     {% for stub in pagination %}
-        <div class="list-group">
+        <div class="list-group mb-3">
             <a href="{{ path('app_therapy_stub_edit', {id: stub.id}) }}" class="list-group-item list-group-item-action" aria-current="true">
                 <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">{{ stub.name }}</h5>
