--- a/templates/therapy/scheme/index.html.twig
+++ b/templates/therapy/scheme/index.html.twig
@@ -12,45 +12,47 @@
             <button class="btn btn-primary" type="button" id="button-addon2">{{ 'therapy_table_load_labels'|trans }}</button>
         </div>
     </div>
-    <div class="row mb-3">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">{{ 'therapy_table_title'|trans }}</th>
-                <th scope="col">{{ 'therapy_table_name'|trans }}</th>
-                <th scope="col">{{ 'therapy_table_description'|trans }}</th>
-                <th scope="col">{{ 'therapy_table_background'|trans }}</th>
-                <th scope="col">{{ 'therapy_table_comment'|trans }}</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for label in data %}
-                <tr class="table-light">
-                    <th scope="row" colspan="5">{{ label.shortName }} : {{ label.id }}</th>
-                </tr>
-                {% for stub in label.stubs %}
+    <form action="{{ path('app_therapy_scheme_generate_pdf') }}" name="report_form" method="POST">
+        <div class="row mb-3">
+            <table class="table">
+                <thead>
                     <tr>
-                        <td class="text-end col-2">
-                            <input type="checkbox" class="form-check-input" {% if (((label.id + 2) / stub.id) % 2) == 0 %}checked{% endif %}>
-                        </td>
-                        <td class="col-1 border-start">{{ stub.name }}</td>
-                        <td class="col-3 border-start">{{ stub.description }}</td>
-                        <td class="col-3 border-start">{{ stub.background }}</td>
-                        <td class="border-start">
-                            <input type="text" class="form-control">
-                        </td>
+                        <th scope="col">{{ 'therapy_table_title'|trans }}</th>
+                        <th scope="col">{{ 'therapy_table_name'|trans }}</th>
+                        <th scope="col">{{ 'therapy_table_description'|trans }}</th>
+                        <th scope="col">{{ 'therapy_table_background'|trans }}</th>
+                        <th scope="col">{{ 'therapy_table_comment'|trans }}</th>
                     </tr>
+                </thead>
+                <tbody>
+                {% for label in data %}
+                    <tr class="table-light">
+                        <th scope="row" colspan="5">{{ label.shortName }}</th>
+                    </tr>
+                    {% for stub in label.stubs %}
+                        <tr>
+                            <td class="text-end col-2">
+                                <input type="checkbox" name="targets[{{ label.id }}][{{ stub.id }}]" class="form-check-input" checked>
+                            </td>
+                            <td class="col-1 border-start">{{ stub.name }}</td>
+                            <td class="col-3 border-start">{{ stub.description }}</td>
+                            <td class="col-3 border-start">{{ stub.background }}</td>
+                            <td class="border-start">
+                                <input name="comments[{{ stub.id }}]" type="text" class="form-control">
+                            </td>
+                        </tr>
+                    {% endfor %}
                 {% endfor %}
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <div class="row mb-3">
-        <div class="col"></div>
-        <div class="col-3">
-            <button class="btn btn-primary flex-fill w-100" type="button">Generate</button>
+                </tbody>
+            </table>
         </div>
-        <div class="col"></div>
-    </div>
+        <div class="row mb-3">
+            <div class="col"></div>
+            <div class="col-3">
+                <button class="btn btn-primary flex-fill w-100" type="submit">Generate Report</button>
+            </div>
+            <div class="col"></div>
+        </div>
+    </form>
 </div>
 {% endblock %}
