Labels loading for report generator fix

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,1 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
+
+.select2-container--default.select2-container--focus .select2-selection--multiple {
+    border: 1px solid #aaa;
+}
