--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,20 +1,20 @@
 {% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">{{ 'project_title'|trans }}</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">{{ 'app-project-title'|trans }}</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="{{ 'app-toggle-navigation'|trans }}">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav w-100">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('app_main') }}">{{ 'app_main_page_title'|trans }}</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_main') }}">{{ 'app-home'|trans }}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('app_therapy_labels_list') }}">{{ 'app_labels_list_page_title'|trans }}</a>
+                        <a class="nav-link active" href="{{ path('app_therapy_labels_list') }}">{{ 'app-labels'|trans }}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('app_therapy_stubs_list') }}">{{ 'app_stabs_list_page_title'|trans }}</a>
+                        <a class="nav-link active" href="{{ path('app_therapy_stubs_list') }}">{{ 'app-therapy-stubs'|trans }}</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
@@ -27,13 +27,13 @@
                                 <a class="dropdown-item" href="{{ path(
                                     app.request.attributes.get('_route'),
                                     app.request.attributes.get('_route_params') | merge({_locale: 'en'})
-                                ) }}">English</a>
+                                ) }}">{{ 'app-english'|trans }}</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="{{ path(
                                     app.request.attributes.get('_route'),
                                     app.request.attributes.get('_route_params') | merge({_locale: 'de'})
-                                ) }}">Deutsch</a>
+                                ) }}">{{ 'app-german'|trans }}</a>
                             </li>
                         </ul>
                     </div>
