Stubs list page translations

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,7 +1,7 @@
 {% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">{{ 'app-project-title'|trans }}</a>
+            <a class="navbar-brand" href="{{ path('app_main') }}">{{ 'app-project-title'|trans }}</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="{{ 'app-toggle-navigation'|trans }}">
                 <span class="navbar-toggler-icon"></span>
             </button>
