--- a/templates/therapy/label/list.html.twig
+++ b/templates/therapy/label/list.html.twig
@@ -3,21 +3,25 @@
 
 {% block body %}
 <div class="container">
-    <h2>
+    <div class="row mb-3">
+        <div class="col">
         {% if app.request.request.get('label_name') is not null %}
-            Results for '{{ app.request.request.get('label_name') }}'
-            <a href="{{ path('app_therapy_labels_list') }}" class="btn btn-outline-secondary">Reset search</a>
+            <h2>{{ 'app-results-for-label-search-title'|trans({'%label_name%': app.request.request.get('label_name')}) }}</h2>
+        </div>
+        <div class="col text-end">
+            <a href="{{ path('app_therapy_labels_list') }}" class="btn btn-outline-secondary">{{ 'app-reset-search-button'|trans }}</a>
         {% else %}
-            {{ 'therapy_stubs_list_title'|trans }}
+            <h2>{{ 'app-therapy-labels-list-page-title'|trans }}</h2>
         {% endif %}
-    </h2>
+        </div>
+    </div>
     <form name="search_label" action="{{ path('app_therapy_labels_list') }}" method="post">
         <div class="input-group mb-3">
             <input type="search" name="label_name" required="required" class="form-control form-control" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">{{ 'search_label'|trans }}</button>
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">{{ 'app-search-for-label-button'|trans }}</button>
         </div>
     </form>
-    <div class="row">
+    <div class="row mb-3">
     {% if pagination|length > 0 %}
         {% for label in pagination %}
             <div class="list-group mb-3">
@@ -32,7 +36,7 @@
     {% else %}
         <div class="list-group mb-3">
             <div class="alert alert-secondary" role="alert">
-                <h5 class="mb-1">No results...</h5>
+                <h5 class="mb-1">{{ 'app-no-results-message'|trans }}</h5>
             </div>
         </div>
     {% endif %}
