Label edit form translations

--- a/templates/therapy/label/edit.html.twig
+++ b/templates/therapy/label/edit.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 <div class="container">
-    <h2>Edit Label</h2>
+    <h2>{{ 'app-label-edit-page-title'|trans }}</h2>
     
     {{ form(labelForm) }}
 </div>
