--- a/templates/therapy/scheme/index.html.twig
+++ b/templates/therapy/scheme/index.html.twig
@@ -25,7 +25,7 @@
             </div>
      
     </form>
-    <form action="{{ path('app_therapy_scheme_generate_pdf') }}" name="report_form" method="POST">
+    <form action="{{ path('app_therapy_scheme_generate_html') }}" name="report_form" method="POST">
         <div class="row mb-3">
             <table class="table">
                 <thead>
@@ -60,11 +60,16 @@
             </table>
         </div>
         <div class="row mb-3">
-            <div class="col"></div>
-            <div class="col-3">
-                <button class="btn btn-primary flex-fill w-100" type="submit">{{ 'app-therapy-report-generate-report-button'|trans }}</button>
+            <div class="col">
+                <div class="d-grid gap-2 d-md-block">
+                    <button formaction="{{ path('app_therapy_scheme_generate_html') }}" class="btn btn-primary" type="submit">
+                        {{ 'app-therapy-report-generate-report-button'|trans }} (HTML)
+                    </button>
+                    <button formaction="{{ path('app_therapy_scheme_generate_pdf') }}" class="btn btn-primary" type="submit">
+                        {{ 'app-therapy-report-generate-report-button'|trans }} (PDF)
+                    </button>
+                </div>
             </div>
-            <div class="col"></div>
         </div>
     </form>
 </div>
