--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap';
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
     border: 1px solid #aaa;
