--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-<div class="container d-grid gap-3">
+<div data-controller="main" class="container d-grid gap-3">
     <div class="row">
         <h2>{{ 'app-main-form-title'|trans }}</h2>
     </div>
