--- a/templates/therapy/stub/index.html.twig
+++ b/templates/therapy/stub/index.html.twig
@@ -16,6 +16,10 @@
                     {{ form_widget(stubForm.description)}}
                 </div>
                 <div class="mb-3">
+                    {{ form_label(stubForm.excerpt) }}
+                    {{ form_widget(stubForm.excerpt)}}
+                </div>
+                <div class="mb-3">
                     {{ form_label(stubForm.background) }}
                     {{ form_widget(stubForm.background)}}
                 </div>
