--- a/templates/therapy/stub/index.html.twig
+++ b/templates/therapy/stub/index.html.twig
@@ -4,7 +4,9 @@
 {% block body %}
     <div class="container">
         <h2>{{ formTitle }}</h2>
-        {{ form_start(stubForm) }}
+        {{ form_start(stubForm, {
+            attr: {'data-controller': 'main'}
+        }) }}
         <div class="row-cols-2">
             <div class="col">
                 <div class="mb-3">
@@ -31,6 +33,7 @@
         <div class="row">
             <div class="d-grid gap-2 d-md-block">
                 {{ form_widget(stubForm.save)}}
+                {{ form_widget(stubForm.saveAndNew)}}
                 {% if stubForm.delete_undo is defined %}
                     {{ form_widget(stubForm.delete_undo)}}
                 {% endif %}
