--- a/templates/therapy/scheme/html-template.html.twig
+++ b/templates/therapy/scheme/html-template.html.twig
@@ -12,20 +12,23 @@
                 <ol>
                 {% for label in data %}
                     {% if label.id in targets|keys %}
-                    <li>
-                        <h5>{{ label.reportName }}</h5>
-                        <ul>
+                        {% if not suppress_labels %}
+                        <li>
+                            <h5>{{ label.reportName }}</h5>
+                            <ul>
+                        {% endif %}
                         {% for stub in label.stubs %}
-                            <li>
                             {% if stub.id in targets[label.id]|keys %}
+                            <li>
                                 <p class="text-black">
-                                    {{ stub.description }}{% if not (stub.description ends with '.') %}.{% endif %} {{ comments[stub.id] }}{% if not (comments[stub.id] ends with '.') and (comments[stub.id]|length > 0) %}.{% endif %}
+                                    {{ use_excerpt == 'on' ? stub.excerpt : stub.description }}{% if not (stub.description ends with '.') %}.{% endif %} {{ comments[stub.id] }}{% if not (comments[stub.id] ends with '.') and (comments[stub.id]|length > 0) %}.{% endif %}
                                 </p>
-                            {% endif %}
                             </li>
+                            {% endif %}
                         {% endfor %}
-                        </ul>
-                    </li>
+                        {% if not suppress_labels %}</ul>
+                        </li>
+                        {% endif %}
                     {% endif %}
                 {% endfor %}
                 </ol>
