--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap';
+@import 'tom-select/dist/css/tom-select.bootstrap5.css';
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
     border: 1px solid #aaa;
