--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="d-grid gap-2 d-md-block">
             <a href="{{ path('app_therapy_stub_new', {'_locale': app.request.locale}) }}" class="btn btn-outline-primary" role="button">{{ 'app-new-therapy-stub-button'|trans }}</a>
-            <a href="{{ path('app_therapy_scheme_new', {'_locale': app.request.locale}) }}" class="btn btn-outline-primary" role="button">{{ 'app-new-therapy-scheme-button'|trans }}</a>
+            <a href="{{ path('app_therapy_scheme_create', {'_locale': app.request.locale}) }}" class="btn btn-outline-primary" role="button">{{ 'app-new-therapy-scheme-button'|trans }}</a>
         </div>
     </div>
 </div>
