--- a/templates/components/therapy-scheme.html.twig
+++ b/templates/components/therapy-scheme.html.twig
@@ -15,9 +15,12 @@
             <button class="btn btn-primary" data-action="live#$render">{{ 'app-load-therapy-labels-button'|trans }}</button>
         </div>
     </div>
-    {% if this.labelsRequest %}
-    <p>{{ 'app-therapy-report-requested-labels'|trans }}: {{ this.labelsRequest }}</p>
-
+    {% if this.labelsRequest and computed.labels|length > 0 %}
+    <div class="row mt-3">
+        <p class="fw-lighter">
+            {{ 'app-therapy-report-requested-labels'|trans }}: <cite title="{{ this.labelsRequest }}">{{ this.labelsRequest }}</cite>
+        </p>
+    </div>
     <div class="row mt-3">
         <div class="form-check form-switch col-3 m-3">
             <input id="suppress-labels" data-model="on(change)|suppressLabels" class="form-check-input" type="checkbox" role="switch"/>
@@ -28,42 +31,70 @@
             <label class="form-check-label" for="use-excerpt">{{ 'app-therapy-report-use-excerpt'|trans }}</label>
         </div>
     </div>
+    <form {{ stimulus_controller('build-report') }} target="_blank" action="{{ path('app_therapy_scheme_generate_html') }}" name="report_form" method="POST">
+        <div class="row mt-3">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">{{ 'app-therapy-report-table-title'|trans }}</th>
+                        <th data-column-index="0" data-shown="true" scope="col">{{ 'app-therapy-report-table-name'|trans }}</th>
+                        <th data-column-index="1" data-shown={% if this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if this.useExcerpt %}style="display: none"{% endif %} id="description-column" scope="col">{{ 'app-therapy-report-table-description'|trans }}</th>
+                        <th data-column-index="2" data-shown={% if not this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if not this.useExcerpt %}style="display: none"{% endif %} id="excerpt-column" scope="col">{{ 'app-therapy-report-table-excerpt'|trans }}</th>
+                        <th data-column-index="3" data-shown="true" scope="col">{{ 'app-therapy-report-table-background'|trans }}</th>
+                        <th data-column-index="4" data-shown="true" scope="col">{{ 'app-therapy-report-table-comment'|trans }}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for label in computed.labels %}
+                    <tr {% if this.suppressLabels %}style="display: none"{% endif %}data-label-row class="table-light">
+                        <th scope="row" colspan="5">{{ label.shortName }}</th>
+                    </tr>
+                    {% if label.stubs is defined %}
+                        {% for stub in label.stubs %}
+                            <tr>
+                                <td class="text-end col-2">
+                                    <input type="checkbox" name="targets[{{ label.id }}][{{ stub.id }}]" class="form-check-input" checked>
+                                </td>
+                                <td data-column-index="0" data-shown="true" class="col-1 border-start">{{ stub.name }}</td>
+                                <td data-column-index="1" data-shown={% if this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if this.useExcerpt %}style="display: none"{% endif %} class="col-3 border-start description">{{ stub.description }}</td>
+                                <td data-column-index="2" data-shown={% if not this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if not this.useExcerpt %}style="display: none"{% endif %} class="col-3 border-start excerpt">{{ stub.excerpt }}</td>
+                                <td data-column-index="3" data-shown="true" class="col-3 border-start">{{ stub.background }}</td>
+                                <td data-column-index="4" data-shown="true" class="border-start">
+                                    <textarea name="comments[{{ label.id }}][{{ stub.id }}][comment]" class="form-control"></textarea>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="row mb-3">
+            <div class="col">
+                <div class="d-grid gap-2 d-md-block">
+                    <button formaction="{{ path('app_therapy_scheme_generate_html') }}" class="btn btn-primary" type="submit">
+                        {{ 'app-therapy-report-generate-report-button'|trans }} (HTML)
+                    </button>
+                    <button formaction="{{ path('app_therapy_scheme_generate_pdf') }}" class="btn btn-primary" type="submit">
+                        {{ 'app-therapy-report-generate-report-button'|trans }} (PDF)
+                    </button>
+                    <button formaction="{{ path('app_therapy_scheme_save_as_template') }}" class="btn btn-primary" type="submit">
+                        {{ 'app-therapy-report-save-as-template-button'|trans }}
+                    </button>
+                </div>
+            </div>
+        </div>
+    </form>
+    {% else %}
     <div class="row mt-3">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">{{ 'app-therapy-report-table-title'|trans }}</th>
-                    <th data-column-index="0" data-shown="true" scope="col">{{ 'app-therapy-report-table-name'|trans }}</th>
-                    <th data-column-index="1" data-shown={% if this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if this.useExcerpt %}style="display: none"{% endif %} id="description-column" scope="col">{{ 'app-therapy-report-table-description'|trans }}</th>
-                    <th data-column-index="2" data-shown={% if not this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if not this.useExcerpt %}style="display: none"{% endif %} id="excerpt-column" scope="col">{{ 'app-therapy-report-table-excerpt'|trans }}</th>
-                    <th data-column-index="3" data-shown="true" scope="col">{{ 'app-therapy-report-table-background'|trans }}</th>
-                    <th data-column-index="4" data-shown="true" scope="col">{{ 'app-therapy-report-table-comment'|trans }}</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for label in computed.labels %}
-                <tr {% if this.suppressLabels %}style="display: none"{% endif %}data-label-row class="table-light">
-                    <th scope="row" colspan="5">{{ label.shortName }}</th>
-                </tr>
-                {% if label.stubs is defined %}
-                    {% for stub in label.stubs %}
-                        <tr>
-                            <td class="text-end col-2">
-                                <input type="checkbox" name="targets[{{ label.id }}][{{ stub.id }}]" class="form-check-input" checked>
-                            </td>
-                            <td data-column-index="0" data-shown="true" class="col-1 border-start">{{ stub.name }}</td>
-                            <td data-column-index="1" data-shown={% if this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if this.useExcerpt %}style="display: none"{% endif %} class="col-3 border-start description">{{ stub.description }}</td>
-                            <td data-column-index="2" data-shown={% if not this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if not this.useExcerpt %}style="display: none"{% endif %} class="col-3 border-start excerpt">{{ stub.excerpt }}</td>
-                            <td data-column-index="3" data-shown="true" class="col-3 border-start">{{ stub.background }}</td>
-                            <td data-column-index="4" data-shown="true" class="border-start">
-                                <textarea name="comments[{{ stub.id }}]" class="form-control"></textarea>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                {% endif %}
-            {% endfor %}
-            </tbody>
-        </table>
+        <p class="fw-lighter">
+            {{ 'app-therapy-report-requested-labels'|trans }}: <cite title="{{ this.labelsRequest }}">{{ this.labelsRequest }}</cite>
+        </p>
+        <div class="mt-3">
+            <div class="alert alert-secondary" role="alert">
+                <h5 class="mb-1">{{ 'app-no-results-message'|trans }}</h5>
+            </div>
+        </div>
     </div>
     {% endif %}
 </div>
