Persisting schema templates implementation

--- a/templates/therapy/scheme/save-as-template.html.twig
+++ b/templates/therapy/scheme/save-as-template.html.twig
@@ -3,6 +3,11 @@
 
 {% block body %}
 <div class="container">
-    {{ dump(data) }}
+    {{ component('scheme-template', {
+        scheme: scheme.id ? scheme : null,
+        targets: targets,
+        comments: comments,
+        form: form
+    }) }}
 </div>
 {% endblock %}
