--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -16,6 +16,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="{{ path('app_therapy_stubs_list') }}">{{ 'app-therapy-stubs'|trans }}</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('app_therapy_scheme_templates_list') }}">{{ 'app-therapy-scheme-templates'|trans }}</a>
+                    </li>
                 </ul>
                 <span class="navbar-text">
                     <div class="nav-item dropdown">
