--- a/templates/components/therapy-scheme.html.twig
+++ b/templates/components/therapy-scheme.html.twig
@@ -1,6 +1,13 @@
 <div {{ attributes }}>
+    {% if this.isSaved %}
+    <h2 class="mt-3">{{ 'app-new-therapy-scheme-template-title'|trans }}: <i>{{ this.template.name }}</i></h2>
+    {% else %}
     <h2 class="mt-3">{{ 'app-new-therapy-scheme-page-title'|trans }}</h2>
+    {% endif %}
     <div class="row mt-3">
+        {% if this.isSaved %}
+        
+        {% else %}
         <div class="col-8">
             <input 
                 name="labels-request"
@@ -14,12 +21,15 @@
         <div class="col-4 text-end">
             <button class="btn btn-primary" data-action="live#$render">{{ 'app-load-therapy-labels-button'|trans }}</button>
         </div>
+        {% endif %}
     </div>
-    {% if this.labelsRequest and computed.labels|length > 0 %}
+    {% if (this.labelsRequest or this.isSaved) and computed.labels|length > 0 %}
     <div class="row mt-3">
+        {% if this.labelsRequest %}
         <p class="fw-lighter">
             {{ 'app-therapy-report-requested-labels'|trans }}: <cite title="{{ this.labelsRequest }}">{{ this.labelsRequest }}</cite>
         </p>
+        {% endif %}
     </div>
     <div class="row mt-3">
         <div class="form-check form-switch col-3 m-3">
@@ -60,7 +70,12 @@
                                 <td data-column-index="2" data-shown={% if not this.useExcerpt %}"false"{% else %}"true"{% endif %} {% if not this.useExcerpt %}style="display: none"{% endif %} class="col-3 border-start excerpt">{{ stub.excerpt }}</td>
                                 <td data-column-index="3" data-shown="true" class="col-3 border-start">{{ stub.background }}</td>
                                 <td data-column-index="4" data-shown="true" class="border-start">
-                                    <textarea name="comments[{{ label.id }}][{{ stub.id }}][comment]" class="form-control"></textarea>
+                                    <textarea 
+                                        name="comments[{{ label.id }}][{{ stub.id }}][comment]" 
+                                        class="form-control"
+                                    >
+                                    {{- computed.template.comments[label.id][stub.id].comment -}}
+                                    </textarea>
                                 </td>
                             </tr>
                         {% endfor %}
