--- a/templates/therapy/scheme-templates/list.html.twig
+++ b/templates/therapy/scheme-templates/list.html.twig
@@ -11,7 +11,7 @@
             {% for template in templates %}
             <div class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="fw-bold">
-                    <a href="#">{{ template.name }}</a>
+                    <a href="{{ path('app_therapy_scheme_load', { id: template.id }) }}">{{ template.name }}</a>
                 </div>
                 <div class="bg-danger p-1 rounded">
                     <a href="{{ path('app_therapy_scheme_template_delete', { id: template.id }) }}" class="text-dark">{{ 'app-delete-button'|trans }}</a>
