--- a/templates/therapy/scheme/html-template.html.twig
+++ b/templates/therapy/scheme/html-template.html.twig
@@ -21,7 +21,10 @@
                             {% if stub.id in targets[label.id]|keys %}
                             <li>
                                 <p class="text-black">
-                                    {{ use_excerpt == 'on' ? stub.excerpt : stub.description }}{% if not (stub.description ends with '.') %}.{% endif %} {{ comments[label.id][stub.id]['comment'] }}{% if not (comments[label.id][stub.id]['comment'] ends with '.') and (comments[label.id][stub.id]['comment']|length > 0) %}.{% endif %}
+                                    {% if not use_excerpt %}{{ stub.description }}{% else %}{{ stub.excerpt }}{% endif %}
+                                    {% if not (stub.description ends with '.') %}.{% endif %} 
+                                    {{- comments[label.id][stub.id]['comment'] -}}
+                                    {% if not (comments[label.id][stub.id]['comment'] ends with '.') and (comments[label.id][stub.id]['comment']|length > 0) %}.{% endif %}
                                 </p>
                             </li>
                             {% endif %}
